<resources>
    <string name="app_name">PetalAdsSdk Demo</string>
    <string name="banner_ad">Banner Ad</string>
    <string name="native_ad">Native Ad</string>
    <string name="reward_ad">Reward Ad</string>
    <string name="interstitial_ad">Interstitial Ad</string>
    <string name="instream_ad">Instream Ad</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="bidding_splash_ad">Bidding Splash Ad</string>
    <string name="consent_settings">Consent Settings</string>
    <string name="load_button_text">Load Ad</string>

    <!-- Banner ad -->
    <string name="banner_ad_id">testw6vs28auh3</string>
    <string name="size_320_50">SIZE_320*50</string>
    <string name="size_320_100">SIZE_320*100</string>
    <string name="size_smart">SIZE_SMART</string>
    <string name="size_300_250">SIZE_300*250</string>
    <string name="size_360_57">SIZE_360*57</string>
    <string name="size_360_144">SIZE_360*144</string>
    <string name="color_black">Black</string>
    <string name="color_white">White</string>
    <string name="color_red">Red</string>
    <string name="color_transparent">Transparent</string>
    <string name="banner_size_label">Size:</string>
    <string name="banner_color_label">Color:</string>

    <!-- native ad -->
    <string name="ad_id_native">testu7m3hc4gvm</string>
    <string name="ad_id_native_small">testb65czjivt9</string>
    <string name="ad_id_native_three">testr6w14o0hqz</string>
    <string name="ad_id_native_video">testy63txaom86</string>
    <string name="ad_flag">Ad</string>
    <string name="display_form">Display form:</string>
    <string name="large_image_with_text">Large image with text.</string>
    <string name="three_small_images_with_text">Three images with text.</string>
    <string name="small_image_with_text">Small image with text.</string>
    <string name="video_with_text">Video with text.</string>
    <string name="ad_with_app_download_button">Ad with app download button.</string>
    <string name="status_ad_loading">Ad loading state: being loaded.</string>
    <string name="status_load_ad_success">Ad loading state: loaded successfully.</string>
    <string name="status_load_ad_finish">Ad loading state: loaded finish.</string>
    <string name="status_load_ad_fail">Ad loading state: failed to be loaded. Error code: </string>
    <string name="status_play_start">Video playback state: starting to be played.</string>
    <string name="status_playing">Video playback state: being played.</string>
    <string name="status_play_end">Video playback state: playback completed.</string>
    <string name="ad_is_closed">Ad is closed.</string>
    <string name="app_version">Ver</string>
    <string name="app_detail">Detail</string>
    <string name="app_privacy">Privacy</string>
    <string name="app_permission">Permission</string>

    <!-- reward ad -->
    <string name="ad_id_reward">testx9dtjwj8hp</string>
    <string name="reward_ad_title">This is rewarded ads sample.</string>
    <string name="play_button">Play</string>
    <string name="watch_video_button_text">Watch Video</string>

    <!-- splash ad -->
    <string name="ad_id_splash">testd7c5cewoj6</string>
    <string name="ad_id_splash_landscape">testq6zq98hecj</string>
    <string name="owner">HUAWEI Developer</string>
    <string name="media_name">Petal Ads</string>
    <string name="copyright_info">Copyright 2020. Huawei Technologies Co., Ltd</string>
    <string name="status_ad_dismissed">Splash Ad is dismissed.</string>

    <!--Interstitial ad-->
    <string name="interstitial_title_text">This is interstitial ad sample.</string>
    <string name="image_ad_id">teste9ih9j0rc3</string>
    <string name="video_ad_id">testb4znbuh3n2</string>
    <string name="load_button">Load Ad</string>
    <string name="interstitial_display_picture">Image</string>
    <string name="interstitial_display_video">Video</string>
    
    <!--Instream ad-->
    <string name="instream_video_content">Your video content</string>
    <string name="instream_skip_ad">Skip</string>
    <string name="instream_learn_more">Learn more</string>
    <string name="instream_ad_id">testy3cglm3pj0</string>
    <string name="instream_normal_video_playing">Normal video is playing</string>
    <string name="instream_ads_playing">Instream ads is playing</string>
    <string name="instream_load">Load Ad</string>
    <string name="instream_register">Register</string>
    <string name="instream_mute">Mute</string>
    <string name="instream_unmute">UnMute</string>
    <string name="instream_play">Play</string>
    <string name="instream_pause">Pause</string>
    <string name="instream_loading">Loading</string>
    <string name="instream_loaded">Ad Loaded</string>

    <!-- Privacy -->
    <string name="protocol_title">Privacy Example of HUAWEI X</string>
    <string name="protocol_content_text">
        1.Privacy description\n
        The PetalAdsSdk_Demo is software providing a code demo for the Petal Ads SDK. Connecting to the network, the software collects and processes information to identify devices, providing customized services or ads. If you do not agree to collect the preceding information or do not agree to call related permissions or functions of your mobile phones, the software cannot run properly. You can stop data collection and uploading by uninstalling or exiting this software.\n\n
        2.Demo description\n
        This demo is for reference only. Modify the content based on the user protocol specifications. \n\n
        3.Advertising and marketing\n
        We will create a user group based on your personal information, collect your device information, usage information, and ad interaction information in this app, and display more relevant personalized ads and other promotion content. In this process, we will strictly protect your privacy. You can learn more about how we collect and use your personal information in personalized ads based on Ads and Privacy.
        If you want to restrict personalized ads, you can tap here to open the ad setting page and enable the function of restricting personalized ads. After the function is enabled, you will still receive equivalent number of ads. However, the ad relevance will be reduced.
        </string>
    <integer name="privacy_start">1033</integer>
    <integer name="privacy_end">1048</integer>
    <integer name="personalized_start">1104</integer>
    <integer name="personalized_end">1108</integer>
    <string name="no_tip">Don\'t remind me again</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="ok">Agree</string>
    <string name="no">Cancel</string>
    <string name="alert_title">Reminder</string>
    <string name="alert_content">HMS Core of this version does not have the related function. Please install HMS Core (APK) of the latest version in AppGallery.</string>
    <string name="alert_confirm">OK</string>

    <!-- Consent -->
    <string name="consent_title">Consent Example of HUAWEI X</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="dialog_close">Close</string>
    <string name="action_remove_ads">Do Not Load Ads</string>
    <string name="consent_init_text">The Ads in HUAWEI X is provided in collaboration with our advertising partners. To provide this service, we need to share certain information about you with these partners, including your city-level location as well as your usage records for the news service.\n\n
    For more information about our partners and how your data is processed, please touch here.\n\n
    By touching AGREE, you indicate that you agree to share the above personal information with our partners so that they can provide you with personalized advertisements on behalf of their customers, based on interests and preferences identified or predicted through analysis of your personal information.
                                       \n\nYou can withdraw your consent at any time by going to [app settings].
                                       \n\nIf you touch SKIP, your data will not be shared with our partners and you will not receive personalized ads.</string>
    <integer name="init_here_start">347</integer>
    <integer name="init_here_end">351</integer>
    <string name="consent_more_info_text">The Ads in HUAWEI X is provided in collaboration with our partners. You can find a full list of our partners for each country/region here.\n\n
    In order to provide you with personalized advertisements, we need to share the following information with our partners:\n\n
    •	User information, including advertising ID, city of residence, country, and language.\n\n
    •	Device information, including device name and model, operating system version, screen size, and network type.\n\n
    •	Service usage information, including news ID and records of views, clicks, dislikes, shares, and comments for news content and advertisements.\n\n
    With your consent, the above information will be shared with our partners so that they can provide you with personalized advertisements on behalf of their customers, based on interests and preferences identified or predicted through analysis of your personal information.\n\n
    You can withdraw your consent at any time by going to app settings.\n\n
    Without your consent, no data will be shared with our partners and you will not receive personalized ads.</string>
    <integer name="more_info_here_start">133</integer>
    <integer name="more_info_here_end">137</integer>
    <string name="mediation_partners"> You can find a full list of our partners for each country/region here:\n\n</string>
    <string name="consent_back">Back</string>
    <string name="consent_yes">Agree</string>
    <string name="consent_skip">Skip</string>
    <string name="consent_change_setting">You can change this setting anytime in the app.</string>
    <string name="thank_you">Thank you!</string>
    <string name="Consent_text">This is a Consent Example</string>

    <string name="load_personalized_text">Load Personalized Ads.</string>
    <string name="load_non_personalized_text">Load Non-Personalized Ads.</string>
    <string name="no_ads_text">Do Not Load Ads.</string>
</resources>
