<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hwads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/category_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_banner"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/banner_tv_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:text="@string/banner_size_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/banner_tv_colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:text="@string/banner_color_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/radio_group_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_title_layout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/size_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/size_320_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/size_320_50" />

            <RadioButton
                android:id="@+id/size_320_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_320_100" />

            <RadioButton
                android:id="@+id/size_smart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_smart" />

            <RadioButton
                android:id="@+id/size_300_250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_300_250" />

            <RadioButton
                android:id="@+id/size_360_57"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_360_57" />

            <RadioButton
                android:id="@+id/size_360_144"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_360_144" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/color_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/color_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/color_white" />

            <RadioButton
                android:id="@+id/color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_black" />

            <RadioButton
                android:id="@+id/color_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_red" />

            <RadioButton
                android:id="@+id/color_transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_transparent" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/load_button_text"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/ad_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <com.huawei.hms.ads.banner.BannerView
        android:id="@+id/hw_banner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        hwads:adId="@string/banner_ad_id"
        hwads:bannerSize="BANNER_SIZE_320_50" />
</RelativeLayout>
