<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_interstitial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/interstitial_title_text"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ad_display_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_interstitial"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|left"
            android:gravity="center_vertical|left"
            android:text="@string/display_form"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/display_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/display_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/interstitial_display_picture" />

            <RadioButton
                android:id="@+id/display_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interstitial_display_video" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/load_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ad_display_form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:text="@string/load_button" />
</RelativeLayout>