<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/reward_ad_title"/>


    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_reward"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/play_button" />

    <Button
        android:id="@+id/show_video_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/watch_video_button_text" />

    <TextView
        android:id="@+id/score_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_video_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>
