<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstreamActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/your_video_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/video_frame_height"
            android:background="@android:color/black">
            <TextView
                android:id="@+id/instream_video_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:text="@string/instream_video_content"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/instream_ad_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/instream_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/demo_3dp"
                android:paddingHorizontal="@dimen/demo_5dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/demo_16dp"
                android:layout_marginLeft="@dimen/demo_16dp"
                android:layout_marginTop="@dimen/demo_8dp"
                android:text="@string/instream_skip_ad"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:background="@drawable/emui_button_select"/>

            <TextView
                android:id="@+id/instream_count_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/demo_3dp"
                android:paddingHorizontal="@dimen/demo_5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/demo_16dp"
                android:layout_marginRight="@dimen/demo_16dp"
                android:layout_marginTop="@dimen/demo_8dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:background="@drawable/emui_button_select"/>

            <TextView
                android:id="@+id/instream_ad_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/demo_16dp"
                android:layout_marginLeft="@dimen/demo_16dp"
                android:layout_marginBottom="@dimen/demo_8dp"
                android:background="@drawable/emui_button_select"
                android:gravity="center"
                android:text="@string/ad_flag"
                android:textColor="@android:color/white"
                android:textSize="8sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/instream_why_this_ad"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_toEndOf="@id/instream_ad_flag"
                android:layout_toRightOf="@id/instream_ad_flag"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/demo_8dp"
                android:layout_marginStart="@dimen/demo_8dp"
                android:layout_marginBottom="@dimen/demo_8dp"
                android:src="@drawable/app_whythisad_info"/>

            <TextView
                android:id="@+id/instream_call_to_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/demo_3dp"
                android:paddingHorizontal="@dimen/demo_5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/demo_16dp"
                android:layout_marginRight="@dimen/demo_16dp"
                android:layout_marginBottom="@dimen/demo_8dp"
                android:text="@string/instream_learn_more"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:background="@drawable/emui_button_select"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/instream_ctrl_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/demo_16dp"
            android:paddingVertical="@dimen/demo_16dp"
            android:layout_below="@id/your_video_content">
            <LinearLayout
                android:id="@+id/load_and_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">
                <Button
                    android:id="@+id/instream_load"
                    android:layout_width="@dimen/demo_100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instream_load"/>
                <Button
                    android:id="@+id/instream_register"
                    android:layout_width="@dimen/demo_100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instream_register"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/play_ctrl"
                android:layout_below="@id/load_and_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">
                <Button
                    android:id="@+id/instream_mute"
                    android:layout_width="@dimen/demo_100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instream_mute"/>
                <Button
                    android:id="@+id/instream_pause_play"
                    android:layout_width="@dimen/demo_100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instream_pause"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
